# phoron_core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: versioning.md
src/: deserializer.rs  error.rs  lib.rs  main.rs  serializer.rs
src/model/: attributes.rs  constant_pool.rs  mod.rs
src/rw/: mod.rs  reader.rs  writer.rs
tests/: test_deserializer.rs  test_serializer.rs
